# Sudoku-C

./: .gitignore.txt  CMakeLists.txt  README.md  main.c
include/: play.h
src/: clock.c  gasolver.c  generator.c  initBoard.c  loader.c  main.c  play.c  printer.c  saver.c  solver.c
